--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -49,7 +49,7 @@
     </div>
   </div> 
   <div *ngFor="let day of lastMonthDays">
-    <div class="border border-height">
+    <div *ngIf="month > 0" class="border border-height">
       <div class="grid100"> 
         <button (click)="onViewDate(['day', year, month, day])" class="btn btn-primary">
           <h6>View Day</h6>
@@ -57,6 +57,15 @@
       </div>
       <h5 class="bold short">{{day}}</h5>
       <app-production-day [mach]="machine" [editMode]="editMode" [date]="year+'-'+lastMonthHold+'-'+day"></app-production-day>
+    </div>
+    <div *ngIf="month == 0" class="border border-height">
+      <div class="grid100"> 
+        <button (click)="onViewDate(['day', year-1, month+12, day])" class="btn btn-primary">
+          <h6>View Day</h6>
+        </button>
+      </div>
+      <h5 class="bold short">{{day}}</h5>
+      <app-production-day [mach]="machine" [editMode]="editMode" [date]="year-1+'-'+lastMonthHold+'-'+day"></app-production-day>
     </div>
   </div>
   <div *ngFor="let day of monthDays">
