--- a/frontend/src/app/shared/home/home.component.html
+++ b/frontend/src/app/shared/home/home.component.html
@@ -1,40 +1,68 @@
 <div class="col-xs-12 col-sm-10 col-md-10 col-sm-offset-1 col-md-offset-1">
     <div *ngIf="auth.user" class="grid50">
-        <div class="border">
-            <h4>Current Lathe Jobs</h4>
-            <div *ngFor="let mach of lathes" class="thin">
-                <h6><strong>{{mach.machine}}</strong></h6>
-                <div class="grid25">
-                    <h6>Job<br>Number:</h6>
-                    <h6>Order<br>Quantity:</h6>
-                    <h6>Remaining<br>Production:</h6>
-                    <h6>Delivery<br>Date:</h6>
+        <div>
+            <div class="border">
+                <div class="thin">
+                    <h4>Current Lathe Jobs</h4>
+                    <div class="grid20">
+                        <h6 class="small border-inner-header-left">Current Machine:</h6>
+                        <h6 class="small border-inner-header-left">Job<br>Number:</h6>
+                        <h6 class="small border-inner-header-left">Order<br>Quantity:</h6>
+                        <h6 class="small border-inner-header-left">Remaining<br>Production:</h6>
+                        <h6 class="small border-inner-header-right">Delivery<br>Date:</h6>
+                    </div>
+                    <div *ngFor="let mach of lathes">
+                        <app-home-line [mach]="mach"></app-home-line>
+                    </div>
                 </div>
-                <app-home-line [mach]="mach"></app-home-line>
+                <br>
             </div>
-            <h4>Unused Active Lathe Jobs</h4>
-            <div class="thin">
-                <div class="grid25">
-                    <h6>Job<br>Number:</h6>
-                    <h6>Order<br>Quantity:</h6>
-                    <h6>Remaining<br>Production:</h6>
-                    <h6>Delivery<br>Date:</h6>
+            <br>
+            <div *ngIf="unusedLatheJobs.length > 0" class="border">
+                <div class="thin">
+                    <h4>Unused Active Lathe Jobs</h4>
+                    <div class="grid25">
+                        <h6 class="border-inner-header-left">Job<br>Number:</h6>
+                        <h6 class="border-inner-header-left">Order<br>Quantity:</h6>
+                        <h6 class="border-inner-header-left">Remaining<br>Production:</h6>
+                        <h6 class="border-inner-header-right">Delivery<br>Date:</h6>
+                    </div>
+                    <div *ngFor="let job of unusedLatheJobs">
+                        <app-home-line [job]="job"></app-home-line>
+                    </div>
                 </div>
-                <div *ngFor="let job of unusedLatheJobs">
-                    <app-home-line [job]="job"></app-home-line>
-                </div>
+                <br>
             </div>
         </div>
-        <div class="border">
-            <h3>Mills</h3>
-            <div class="thin" *ngFor="let job of currentMillJobs">
-                <div class="border grid50">
-                    <h6>Job Number:<br><strong>{{job.jobNumber}}</strong></h6>
-                    <h6 *ngIf="job.orderQuantity">Order Quantity:<br><strong>{{job.orderQuantity}}</strong></h6>
-                    <h6 *ngIf="!job.orderQuantity">Order Quantity:<br><strong>Unknown</strong></h6>
-                    <h6 *ngIf="job.remainingQuantity">Production Remaining:<br><strong>{{job.remainingQuantity}}</strong></h6>
-                    <h6 *ngIf="!job.remainingQuantity">Production Remaining:<br><strong>Unknown</strong></h6>
-                    <h6 *ngIf="job.deliveryDate">Delivery Date:<br><strong>{{job.deliveryDate}}</strong></h6>
+        <div>
+            <div class="border">
+                <div class="thin">
+                    <h4>Current Mill Jobs</h4>
+                    <div class="grid25">
+                        <h6 class="border-inner-header-left">Job<br>Number:</h6>
+                        <h6 class="border-inner-header-left">Order<br>Quantity:</h6>
+                        <h6 class="border-inner-header-left">Remaining<br>Production:</h6>
+                        <h6 class="border-inner-header-right">Delivery<br>Date:</h6>
+                    </div>
+                    <div *ngFor="let job of currentMillJobs">
+                        <app-home-line [job]="job"></app-home-line>
+                    </div>
+                </div>
+                <br>
+            </div>
+            <br>
+            <div *ngIf="unusedMillJobs.length > 0" class="border">
+                <div class="thin">
+                    <h4>Unused Active Mill Jobs</h4>
+                    <div class="grid25">
+                        <h6>Job<br>Number:</h6>
+                        <h6>Order<br>Quantity:</h6>
+                        <h6>Remaining<br>Production:</h6>
+                        <h6>Delivery<br>Date:</h6>
+                    </div>
+                    <div *ngFor="let job of unusedMillJobs">
+                        <app-home-line [job]="job"></app-home-line>
+                    </div>
                 </div>
                 <br>
             </div>
