updated styling in home component

--- a/frontend/src/app/shared/home/home-line/home-line.component.html
+++ b/frontend/src/app/shared/home/home-line/home-line.component.html
@@ -1,17 +1,17 @@
 <div *ngIf="jobInUse && !mach" class="grid25">
-    <h6 class="border-inner-left"><strong>{{jobInUse.jobNumber}}</strong></h6>
-    <h6 class="border-inner-left" *ngIf="jobInUse.orderQuantity"><strong>{{jobInUse.orderQuantity}}</strong></h6>
-    <h6 class="border-inner-left" *ngIf="!jobInUse.orderQuantity"><strong>Unknown</strong></h6>
-    <h6 class="border-inner-left" *ngIf="jobInUse.remainingQuantity"><strong>{{jobInUse.remainingQuantity}}</strong></h6>
-    <h6 class="border-inner-left" *ngIf="!jobInUse.remainingQuantity"><strong>Unknown</strong></h6>
-    <h6 class="border-inner-right"><strong>{{jobInUse.deliveryDate}}</strong></h6>
+    <h6 class="border-inner-left"><br><strong>{{jobInUse.jobNumber}}</strong></h6>
+    <h6 class="border-inner-left" *ngIf="jobInUse.orderQuantity"><br><strong>{{jobInUse.orderQuantity}}</strong></h6>
+    <h6 class="border-inner-left" *ngIf="!jobInUse.orderQuantity"><br><strong>Unknown</strong></h6>
+    <h6 class="border-inner-left" *ngIf="jobInUse.remainingQuantity"><br><strong>{{jobInUse.remainingQuantity}}</strong></h6>
+    <h6 class="border-inner-left" *ngIf="!jobInUse.remainingQuantity"><br><strong>Unknown</strong></h6>
+    <h6 class="border-inner-right"><br><strong>{{jobInUse.deliveryDate}}</strong></h6>
 </div>
 <div *ngIf="jobInUse && mach" class="grid20">
-    <h6 class="small border-inner-left"><strong>{{mach.machine}}</strong></h6>
-    <h6 class="small border-inner-left"><strong>{{jobInUse.jobNumber}}</strong></h6>
-    <h6 class="small border-inner-left" *ngIf="jobInUse.orderQuantity"><strong>{{jobInUse.orderQuantity}}</strong></h6>
-    <h6 class="small border-inner-left" *ngIf="!jobInUse.orderQuantity"><strong>Unknown</strong></h6>
-    <h6 class="small border-inner-left" *ngIf="jobInUse.remainingQuantity"><strong>{{jobInUse.remainingQuantity}}</strong></h6>
-    <h6 class="small border-inner-left" *ngIf="!jobInUse.remainingQuantity"><strong>Unknown</strong></h6>
-    <h6 class="small border-inner-right"><strong>{{jobInUse.deliveryDate}}</strong></h6>
+    <h6 class="small border-inner-left"><br><strong>{{mach.machine}}</strong></h6>
+    <h6 class="small border-inner-left"><br><strong>{{jobInUse.jobNumber}}</strong></h6>
+    <h6 class="small border-inner-left" *ngIf="jobInUse.orderQuantity"><br><strong>{{jobInUse.orderQuantity}}</strong></h6>
+    <h6 class="small border-inner-left" *ngIf="!jobInUse.orderQuantity"><br><strong>Unknown</strong></h6>
+    <h6 class="small border-inner-left" *ngIf="jobInUse.remainingQuantity"><br><strong>{{jobInUse.remainingQuantity}}</strong></h6>
+    <h6 class="small border-inner-left" *ngIf="!jobInUse.remainingQuantity"><br><strong>Unknown</strong></h6>
+    <h6 class="small border-inner-right"><br><strong>{{jobInUse.deliveryDate}}</strong></h6>
 </div>
