--- a/frontend/src/app/job/job-show/job-show.component.html
+++ b/frontend/src/app/job/job-show/job-show.component.html
@@ -1,6 +1,8 @@
-<div class='grid' >
-  <div *ngFor="let job of jobs"> 
-    <app-job-find-show [jobInput]="job"> </app-job-find-show>
+<div class="grid2">
+  <div class='grid' >
+    <div class="set-width" *ngFor="let job of jobs"> 
+      <app-job-find-show [jobInput]="job"> </app-job-find-show>
+    </div>
   </div>
 </div>
 <br>
