--- a/frontend/src/app/shared/home/home.component.css
+++ b/frontend/src/app/shared/home/home.component.css
@@ -1,6 +1,6 @@
 .grid50 { 
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 49% 2% 49%;
     text-align: center;
 }
 
