--- a/frontend/src/app/shared/home/home.component.html
+++ b/frontend/src/app/shared/home/home.component.html
@@ -36,6 +36,7 @@
                 <br>
             </div>
         </div>
+        <div></div>
         <div>
             <div class="border">
                 <div class="thin">
