added backend infastructure for part rev edit

--- a/frontend/src/app/part/part-find/part-find-show/part-find-show.component.css
+++ b/frontend/src/app/part/part-find/part-find-show/part-find-show.component.css
@@ -1,5 +1,10 @@
 .grid { 
     display: grid;
+    grid-template-columns: 100%;
+}
+
+.grid50 { 
+    display: grid;
     grid-template-columns: 50% 50%;
 }
 
