--- a/frontend/src/app/part/part-find/part-find-show/part-find-show.component.html
+++ b/frontend/src/app/part/part-find/part-find-show/part-find-show.component.html
@@ -1,30 +1,27 @@
 <div *ngIf="part">
-  <div>
-    <ul class='border list-group'>
-      <li class="list-group-item" >
-        <div class="grid">
-          <button *ngIf="part.active == 'Active'" class='btn btn-danger' (click)="changeActive()">Set Part Inactive</button>
-          <button *ngIf="part.active != 'Active'" class='btn btn-success' (click)="changeActive()">Set Part Active</button>
-        </div>
-        <h6></h6>
-        <h5>Part #:</h5>
-        <h5 class="bold">{{part.partNumber}}</h5>
-        <h6></h6>
-        <h5>Rev:</h5>
-        <h5 class="bold">{{part.rev}}</h5>
-      </li>
-      <div *ngIf="!editMode" class="grid50">
-        <div class="grid">
-          <button class='btn btn-danger' (click)="onDelete(part.partNumber)">Delete Part</button>
-        </div>
-        <div class="grid">
-          <button class='btn btn-info' (click)="onEdit()">Edit Part</button>
-        </div>
+  <div class="border">
+    <div class="grid">
+      <button *ngIf="part.active == 'Active'" class='btn btn-danger' (click)="changeActive()">Set Part Inactive</button>
+      <button *ngIf="part.active != 'Active'" class='btn btn-success' (click)="changeActive()">Set Part Active</button>
+    </div>
+    <div class="spaced">
+      <h5>Part #:</h5>
+      <h5 class="bold">{{part.partNumber}}</h5>
+    </div>
+    <div *ngIf="!editMode" class="spaced">
+      <h5>Rev: <strong>{{part.rev}}</strong></h5>
+    </div>
+    <div *ngIf="editMode">
+      <app-part-edit [part]="part"></app-part-edit>
+    </div>
+    <div *ngIf="!editMode" class="grid50">
+      <div class="grid">
+        <button class='btn btn-danger' (click)="onDelete(part.partNumber)">Delete Part</button>
       </div>
-      <div *ngIf="editMode">
-        <app-part-edit></app-part-edit>
+      <div class="grid">
+        <button class='btn btn-info' (click)="onEdit()">Edit Part</button>
       </div>
-    </ul>
+    </div>
   </div>
 </div>
 <div *ngIf='!part'>
