updated logic for hourly set time

--- a/frontend/src/app/hourly/hourly-show/hourly-show.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show.component.html
@@ -50,7 +50,7 @@
                     </app-machine-edit>     
                 </div>
                 <div *ngIf="hourServ.quick[i] && hourServ.setTime[i]" class="list-group-item">
-                    <app-hourly-set-time [machName]="mach.machine" [index]="i"></app-hourly-set-time>
+                    <app-hourly-set-time [startTime]="hourServ.startTimes[i]" [machName]="mach.machine" [index]="i"></app-hourly-set-time>
                 </div>
                 <app-hourly-show-each [machine]="mach" [index]="i" [startTime]="hourServ.startTimes[i]">
                 </app-hourly-show-each>
