--- a/frontend/src/app/production/production-by-machine/production-shift/production-shift.component.html
+++ b/frontend/src/app/production/production-by-machine/production-shift/production-shift.component.html
@@ -15,9 +15,9 @@
 </h5>
 <div *ngIf="editMode && prod">
     <p class="small-break"></p>
-  <app-production-quantity (updatedProduction)="updateProduction($event)" [quantity]="prod.quantity" [id]="prod.id"></app-production-quantity>
+  <app-production-quantity (notEdit)="notEdit()" (updatedProduction)="updateProduction($event)" [quantity]="prod.quantity" [mach]="mach" [id]="prod.id"></app-production-quantity>
 </div>
 <div *ngIf="editMode && !prod">
     <p class="small-break"></p>
-  <app-production-quantity (updatedProduction)="updateProduction($event)" [shift]="shift" [quantity]="0" [date]="date" [mach]="mach"></app-production-quantity>
+  <app-production-quantity (notEdit)="notEdit()" (updatedProduction)="updateProduction($event)" [shift]="shift" [quantity]="0" [date]="date" [mach]="mach"></app-production-quantity>
 </div>
