updated version number on welcome page

--- a/frontend/src/app/shared/welcome/welcome.component.html
+++ b/frontend/src/app/shared/welcome/welcome.component.html
@@ -1,6 +1,7 @@
-<h2> Welcome to Production Manager V0.7 </h2>
+<h2> Welcome to Production Manager V0.9 </h2>
 <h4>
-  If this is your first time here, you can <a routerLink='/register'>sign up</a> and create a new account with the beta for free!
+  If this is your first time here, you can <a routerLink='/register'>sign up</a> and create a new account 
+  <br>with the beta for free!
   <br><br>
   If you already have an account, you can <a routerLink='/login'>log in</a> here!
 </h4>
