--- a/frontend/src/app/job/job-new/job-new.component.html
+++ b/frontend/src/app/job/job-new/job-new.component.html
@@ -28,7 +28,7 @@
           class="form-control">
       </div>
       <div class="form-group">
-        <label for="deliveryDate">Delivery Date (Optional)</label>
+        <label for="deliveryDate">Delivery Date</label>
         <input 
           formControlName='deliveryDate'
           type="date" 
