--- a/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
@@ -11,6 +11,6 @@
         </div>
     </div>
     <div *ngIf="editMulti[i]">
-        <app-hourly-edit [lot]="lot" [startTime]="startTime"></app-hourly-edit>
+        <app-hourly-new-short [lot]="lot" [startTime]="startTime"></app-hourly-new-short>
     </div>
 </li>
